new error handling

--- a/demo_secondmoment.ipynb
+++ b/demo_secondmoment.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7e8e044c-4b60-4f14-a8aa-f1d1ab2c8a17",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "Graphics object consisting of 8 graphics primitives"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "a621e0de-a242-4d18-9089-a48cc02ade31",
    "metadata": {},
    "outputs": [
@@ -1513,7 +1513,7 @@
        "<class 'range'>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "id": "5c372d93",
    "metadata": {},
    "outputs": [
@@ -1537,18 +1537,48 @@
       "\n",
       "(2*q_0^5+10*q_0^4*q_1+16*q_0^3*q_1^2+8*q_0^2*q_1^3+5*q_0^4*q_2+16*q_0^3*q_1*q_2+12*q_0^2*q_1^2*q_2+4*q_0^3*q_2^2+6*q_0^2*q_1*q_2^2+q_0^2*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)\n",
       "(2*q_0^5+10*q_0^4*q_1+16*q_0^3*q_1^2+8*q_0^2*q_1^3+5*q_0^4*q_2+16*q_0^3*q_1*q_2+12*q_0^2*q_1^2*q_2+4*q_0^3*q_2^2+6*q_0^2*q_1*q_2^2+q_0^2*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)\n",
-      "range = <class 'range'> q0 = 1 q1 = -1 q2 = 2\n"
+      "range = <class 'range'> q0 = 1 q1 = -1 q2 = 2\n",
+      "         2        2\n",
+      "Matrix ZZ  <--- ZZ\n",
+      "\n",
+      "(q_0^3*q_2^2+q_0^2*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)\n",
+      "(q_0^3*q_2^2+q_0^2*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)\n",
+      "range = <class 'range'> q0 = 1 q1 = 0 q2 = 1\n",
+      "         2        2\n",
+      "Matrix ZZ  <--- ZZ\n",
+      "\n",
+      "(q_0^3*q_2^2+q_0^2*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)\n",
+      "(q_0^3*q_2^2+q_0^2*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)\n",
+      "range = <class 'range'> q0 = 1 q1 = 0 q2 = 2\n",
+      "         2        2\n",
+      "Matrix ZZ  <--- ZZ\n",
+      "\n",
+      "(2*q_0^5-10*q_0^4*q_1+16*q_0^3*q_1^2-8*q_0^2*q_1^3+5*q_0^4*q_2-16*q_0^3*q_1*q_2+12*q_0^2*q_1^2*q_2+4*q_0^3*q_2^2-6*q_0^2*q_1*q_2^2+q_0^2*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)\n",
+      "(2*q_0^5-10*q_0^4*q_1+16*q_0^3*q_1^2-8*q_0^2*q_1^3+5*q_0^4*q_2-16*q_0^3*q_1*q_2+12*q_0^2*q_1^2*q_2+4*q_0^3*q_2^2-6*q_0^2*q_1*q_2^2+q_0^2*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)\n",
+      "range = <class 'range'> q0 = 1 q1 = 1 q2 = 2\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "'numpy.float64' object is not callable",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/penegas/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/voronoi_cell.py:84: SyntaxWarning: invalid escape sequence '\\g'\n",
+      "  \"\"\"\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "your matrix is not positive-definite.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[56], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrange = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mrange\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m q0 = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mq0\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m q1 = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mq1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m q2 = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mq2\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     20\u001b[0m valueAtQ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28meval\u001b[39m(poly\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m^\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m**\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq_0\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mstr\u001b[39m(q0))\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq_1\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mstr\u001b[39m(q1))\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq_2\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mstr\u001b[39m(q2)))\n\u001b[0;32m---> 21\u001b[0m secondMomentOfQ \u001b[38;5;241m=\u001b[39m \u001b[43msm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mVCell\u001b[49m\u001b[43m(\u001b[49m\u001b[43mQ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mInteger\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m valueAtQ \u001b[38;5;241m!=\u001b[39m secondMomentOfQ:\n\u001b[1;32m     23\u001b[0m \t\u001b[38;5;28;01mcontinue\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'numpy.float64' object is not callable"
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m(\u001b[38;5;129;01mnot\u001b[39;00m isPositiveDefinite(Q)):\n\u001b[1;32m     17\u001b[0m \t\u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m poly \u001b[38;5;241m=\u001b[39m \u001b[43mnormalizedChamberSecondMomentPolynomial\u001b[49m\u001b[43m(\u001b[49m\u001b[43mQ\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrange = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mrange\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m q0 = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mq0\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m q1 = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mq1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m q2 = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mq2\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     20\u001b[0m valueAtQ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28meval\u001b[39m(poly\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m^\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m**\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq_0\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mstr\u001b[39m(q0))\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq_1\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mstr\u001b[39m(q1))\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq_2\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mstr\u001b[39m(q2)))\n",
+      "File \u001b[0;32m~/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/orchestration.py:170\u001b[0m, in \u001b[0;36mnormalizedChamberSecondMomentPolynomial\u001b[0;34m(Q, verboseComputationProgress, verboseSecondMoments, verboseVertex)\u001b[0m\n\u001b[1;32m    169\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mnormalizedChamberSecondMomentPolynomial\u001b[39m(Q, verboseComputationProgress\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, verboseSecondMoments\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, verboseVertex\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m--> 170\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mnormalizedChamberSecondMomentPolynomialResult\u001b[49m\u001b[43m(\u001b[49m\u001b[43mQ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverboseComputationProgress\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverboseSecondMoments\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverboseVertex\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    171\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m verboseComputationProgress:\n\u001b[1;32m    172\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDebug computation progress: result = \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(result))\n",
+      "File \u001b[0;32m~/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/orchestration.py:128\u001b[0m, in \u001b[0;36mnormalizedChamberSecondMomentPolynomialResult\u001b[0;34m(Q, verboseComputationProgress, verboseSecondMoments, verboseVertex)\u001b[0m\n\u001b[1;32m    116\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    117\u001b[0m \u001b[38;5;124;03mExecute a Sage computation and pass results to Macaulay2.\u001b[39;00m\n\u001b[1;32m    118\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    125\u001b[0m \u001b[38;5;124;03mthe polynomial string with logs and debug info\u001b[39;00m\n\u001b[1;32m    126\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    127\u001b[0m \u001b[38;5;66;03m# Step 1: Run Sage computation\u001b[39;00m\n\u001b[0;32m--> 128\u001b[0m sage_string \u001b[38;5;241m=\u001b[39m \u001b[43mFormatPullingTrigMatrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43mQ\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    129\u001b[0m matrix_m2 \u001b[38;5;241m=\u001b[39m macaulifyMatrix(Q)\n\u001b[1;32m    131\u001b[0m \u001b[38;5;66;03m# Step 2: Load SmPoly function with all its dependencies\u001b[39;00m\n",
+      "File \u001b[0;32m~/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/macaulay_parsing.py:25\u001b[0m, in \u001b[0;36mFormatPullingTrigMatrix\u001b[0;34m(Q)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mFormatPullingTrigMatrix\u001b[39m(Q):\n\u001b[0;32m---> 25\u001b[0m     VC \u001b[38;5;241m=\u001b[39m \u001b[43mVCell\u001b[49m\u001b[43m(\u001b[49m\u001b[43mQ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m     irv \u001b[38;5;241m=\u001b[39m relevantVectorDictionary(VC, Q)\n\u001b[1;32m     27\u001b[0m     pt \u001b[38;5;241m=\u001b[39m pulling_triangulation(VC)\n",
+      "File \u001b[0;32m~/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/voronoi_cell.py:51\u001b[0m, in \u001b[0;36mVCell\u001b[0;34m(Q, **rangeorlist)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;124;03mComputes the Voronoi cell of the Z^d lattice with metric `Q`\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;124;03m  introduce floating-point inaccuracies for very large or very small values.\u001b[39;00m\n\u001b[1;32m     49\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m numpy\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mdet(numpy\u001b[38;5;241m.\u001b[39marray(Q)) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m: \n\u001b[0;32m---> 51\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myour matrix is not positive-definite.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myour matrix is not positive-definite.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (numpy\u001b[38;5;241m.\u001b[39marray(Q)\u001b[38;5;241m.\u001b[39mtranspose() \u001b[38;5;241m!=\u001b[39m numpy\u001b[38;5;241m.\u001b[39marray(Q))\u001b[38;5;241m.\u001b[39many():\n",
+      "\u001b[0;31mException\u001b[0m: your matrix is not positive-definite."
      ]
     }
    ],
@@ -1565,21 +1595,21 @@
     "\treturn 1\n",
     "\n",
     "for q0 in range(-3, 3, 1):\n",
-    "\tfor q1 in range(-3, 3, 1):\n",
-    "\t\tfor q2 in range(-3, 3, 1):\n",
-    "\t\t\tQ = [[q0, q1], [q1, q2]]\n",
-    "\t\t\tif(not isPositiveDefinite(Q)):\n",
-    "\t\t\t\tcontinue\n",
-    "\t\t\tpoly = normalizedChamberSecondMomentPolynomial(Q)\n",
-    "\t\t\tprint(f\"range = {range} q0 = {q0} q1 = {q1} q2 = {q2}\")\n",
-    "\t\t\tvalueAtQ = eval(poly.replace(\"^\", \"**\").replace(\"q_0\", str(q0)).replace(\"q_1\", str(q1)).replace(\"q_2\", str(q2)))\n",
-    "\t\t\tsecondMomentOfQ = sm(VCell(Q, range = 3), Q)\n",
-    "\t\t\tif valueAtQ != secondMomentOfQ:\n",
-    "\t\t\t\tcontinue\n",
-    "\t\t\tif not valueAtQ == secondMomentOfQ:\n",
-    "\t\t\t\tprint(\"Discrepancy found for Q =\", Q)\n",
-    "\t\t\t\tprint(\"Polynomial value:\", valueAtQ)\n",
-    "\t\t\t\tprint(\"Second moment value:\", secondMomentOfQ)"
+    "    for q1 in range(-3, 3, 1):\n",
+    "        for q2 in range(-3, 3, 1):\n",
+    "            Q = [[q0, q1], [q1, q2]]\n",
+    "            if(not isPositiveDefinite(Q)):\n",
+    "            continue\n",
+    "            poly = normalizedChamberSecondMomentPolynomial(Q)\n",
+    "            print(f\"range = {range} q0 = {q0} q1 = {q1} q2 = {q2}\")\n",
+    "            valueAtQ = eval(poly.replace(\"^\", \"**\").replace(\"q_0\", str(q0)).replace(\"q_1\", str(q1)).replace(\"q_2\", str(q2)))\n",
+    "            secondMomentOfQ = polytopeSecondMoment(VCell(Q, range = 3), Q)\n",
+    "            if valueAtQ != secondMomentOfQ:\n",
+    "            continue\n",
+    "            if not valueAtQ == secondMomentOfQ:\n",
+    "            print(\"Discrepancy found for Q =\", Q)\n",
+    "            print(\"Polynomial value:\", valueAtQ)\n",
+    "            print(\"Second moment value:\", secondMomentOfQ)"
    ]
   },
   {
